--- a/index.html
+++ b/index.html
@@ -275,7 +275,8 @@
 
                                 <div class="custom">
                                     <p style="text-align: center;"><a title="Microondas novos e usados"
-                                                                      href="links/microondas-novos-e-usados.html" rel="alternate"><img
+                                                                      href="links/microondas-novos-e-usados.html"
+                                                                      rel="alternate"><img
                                             title="Microondas novos e usados" src="images/site/novosusados.jpg"
                                             alt="Microondas novos e usados"/></a></p></div>
                             </div>
