Coloquei todos arquivos js em uma pasta, ajustei referências no index.html

--- a/index.html
+++ b/index.html
@@ -73,26 +73,12 @@
     <script src="templates/casadomicroondascuritiba/js/main.js" type="text/javascript"></script>
     <script src="templates/casadomicroondascuritiba/js/frontend-edit.js" type="text/javascript"></script>
     <script src="media/mod_vt_nivo_slider/js/jquery.nivo.slider.min.js" type="text/javascript"></script>
-    <script type="text/javascript">
-        jQuery(window).on('load', function () {
-            new JCaption('img.caption');
-        });
-    </script>
+    <script src="templates/casadomicroondascuritiba/js/jsQueEstavaNoIndex.js" type="text/javascript"></script>
 
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-92072355-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-
-        gtag('js', new Date());
-
-        gtag('config', 'UA-92072355-1');
-    </script>
+    <script src="templates/casadomicroondascuritiba/js/jsQueEstavaNoIndex.js" type="text/javascript"></script>
 
 </head>
 <body class="site com-content view-featured no-layout no-task itemid-101 pt-br ltr  sticky-header layout-fluid">
@@ -175,28 +161,7 @@
 
                                 </div>
                             </div>
-                            <script type="text/javascript">
-                                jQuery.noConflict();
-                                jQuery(window).load(function () {
-                                    jQuery('#vt_nivo_slider94').nivoSlider({
-                                        effect: 'fold', // Specify sets like: 'fold,fade,sliceDown'
-                                        slices: 15, // For slice animations
-                                        boxCols: 8, // For box animations
-                                        boxRows: 4, // For box animations
-                                        animSpeed: 500, // Slide transition speed
-                                        pauseTime: 3000, // How long each slide will show
-                                        startSlide: 1, // Set starting Slide (0 index)
-                                        directionNav: true, // Next & Prev navigation
-                                        controlNav: false, // 1,2,3... navigation
-                                        controlNavThumbs: false, // Use thumbnails for Control Nav
-                                        pauseOnHover: true, // Stop animation while hovering
-                                        manualAdvance: false, // Force manual transitions
-                                        prevText: 'Prev', // Prev directionNav text
-                                        nextText: 'Next', // Next directionNav text
-                                        randomStart: true, // Start on a random slide
-                                    });
-                                });
-                            </script>
+                            <script src="templates/casadomicroondascuritiba/js/jsQueEstavaNoIndex.js" type="text/javascript"></script>
                         </div>
                     </div>
                 </div>
