--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <link href="favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon"/>
     <link href="//fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&amp;subset=latin"
           rel="stylesheet" type="text/css"/>
-    <link href="templates/casadomicroondascuritiba/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-    <link href="templates/casadomicroondascuritiba/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
-    <link href="templates/casadomicroondascuritiba/css/legacy.css" rel="stylesheet" type="text/css"/>
-    <link href="templates/casadomicroondascuritiba/css/template.css" rel="stylesheet" type="text/css"/>
-    <link href="templates/casadomicroondascuritiba/css/presets/preset1.css" rel="stylesheet" type="text/css"
+    <link href="templates/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="templates/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
+    <link href="templates/css/legacy.css" rel="stylesheet" type="text/css"/>
+    <link href="templates/css/template.css" rel="stylesheet" type="text/css"/>
+    <link href="templates/css/presets/preset1.css" rel="stylesheet" type="text/css"
           class="preset"/>
     <link href="templates/casadomicroondascuritiba/css/frontend-edit.css" rel="stylesheet" type="text/css"/>
     <link href="media/mod_vt_nivo_slider/css/nivo-slider.min.css" rel="stylesheet" type="text/css"/>
@@ -64,21 +64,23 @@
             margin: 10px 20px;
         }
     </style>
-    <script src="media/jui/js/jquery.min.js" type="text/javascript"></script>
-    <script src="media/jui/js/jquery-noconflict.js" type="text/javascript"></script>
-    <script src="media/jui/js/jquery-migrate.min.js" type="text/javascript"></script>
-    <script src="media/system/js/caption.js" type="text/javascript"></script>
-    <script src="templates/casadomicroondascuritiba/js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="templates/casadomicroondascuritiba/js/jquery.sticky.js" type="text/javascript"></script>
-    <script src="templates/casadomicroondascuritiba/js/main.js" type="text/javascript"></script>
-    <script src="templates/casadomicroondascuritiba/js/frontend-edit.js" type="text/javascript"></script>
-    <script src="media/mod_vt_nivo_slider/js/jquery.nivo.slider.min.js" type="text/javascript"></script>
-    <script src="templates/casadomicroondascuritiba/js/jsQueEstavaNoIndex.js" type="text/javascript"></script>
 
-
+    <!-- Bibliotecas externas -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-92072355-1"></script>
-    <script src="templates/casadomicroondascuritiba/js/jsQueEstavaNoIndex.js" type="text/javascript"></script>
+    <script src="templates/js/jsQueEstavaNoIndex.js" type="text/javascript"></script>
+
+    <!-- Scripts do projeto -->
+    <!--<script src="templates/casadomicroondascuritiba/js/jquery-noconflict.js" type="text/javascript"></script>-->
+    <script src="templates/js/jquery.sticky.js" type="text/javascript"></script>
+    <script src="templates/js/frontend-edit.js" type="text/javascript"></script>
+    <script src="templates/js/jquery.nivo.slider.min.js" type="text/javascript"></script>
+    <script src="templates/js/jsQueEstavaNoIndex.js" type="text/javascript"></script>
+    <script src="templates/js/main.js" type="text/javascript"></script>
+    <script src="templates/js/caption.js" type="text/javascript"></script>
+
 
 </head>
 <body class="site com-content view-featured no-layout no-task itemid-101 pt-br ltr  sticky-header layout-fluid">
@@ -161,7 +163,6 @@
 
                                 </div>
                             </div>
-                            <script src="templates/casadomicroondascuritiba/js/jsQueEstavaNoIndex.js" type="text/javascript"></script>
                         </div>
                     </div>
                 </div>
