--- a/links/para-conserto-em-30-minutos-clique-aqui.html
+++ b/links/para-conserto-em-30-minutos-clique-aqui.html
@@ -60,34 +60,21 @@
             margin: 10px 20px;
         }
     </style>
-    <script src="../media/jui/js/jquery.min.js" type="text/javascript"></script>
-    <script src="../media/jui/js/jquery-noconflict.js" type="text/javascript"></script>
-    <script src="../media/jui/js/jquery-migrate.min.js" type="text/javascript"></script>
-    <script src="../media/system/js/caption.js" type="text/javascript"></script>
-    <script src="../templates/casadomicroondascuritiba/js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="../templates/casadomicroondascuritiba/js/jquery.sticky.js" type="text/javascript"></script>
-    <script src="../templates/casadomicroondascuritiba/js/main.js" type="text/javascript"></script>
-    <script src="../templates/casadomicroondascuritiba/js/frontend-edit.js" type="text/javascript"></script>
-    <script type="text/javascript">
-        jQuery(window).on('load', function () {
-            new JCaption('img.caption');
-        });
-    </script>
 
-
+        <!-- Bibliotecas externas -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-92072355-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
 
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-
-        gtag('js', new Date());
-
-        gtag('config', 'UA-92072355-1');
-    </script>
+    <!-- Scripts do projeto -->
+    <!--<script src="templates/casadomicroondascuritiba/js/jquery-noconflict.js" type="text/javascript"></script>-->
+    <script src="../templates/js/jquery.sticky.js" type="text/javascript"></script>
+    <script src="../templates/js/frontend-edit.js" type="text/javascript"></script>
+    <script src="../templates/js/jquery.nivo.slider.min.js" type="text/javascript"></script>
+    <script src="../templates/js/jsQueEstavaNoIndex.js" type="text/javascript"></script>
+    <script src="../templates/js/main.js" type="text/javascript"></script>
+    <script src="../templates/js/caption.js" type="text/javascript"></script>
 
 </head>
 <body class="site com-content view-article no-layout no-task itemid-114 pt-br ltr  sticky-header layout-fluid">
