--- a/index.html
+++ b/index.html
@@ -65,54 +65,60 @@
         }
     </style>
 
-    <!-- Bibliotecas externas -->
+        <!-- Bibliotecas externas -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-92072355-1"></script>
 
     <!-- Scripts do projeto -->
-    <script src="templates/js/jquery.sticky.js" type="text/javascript"></script>
-    <script src="templates/js/frontend-edit.js" type="text/javascript"></script>
-    <script src="templates/js/jquery.nivo.slider.min.js" type="text/javascript"></script>
-    <script src="templates/js/jsQueEstavaNoIndex.js" type="text/javascript"></script>
-    <script src="templates/js/main.js" type="text/javascript"></script>
-    <script src="templates/js/caption.js" type="text/javascript"></script>
-
+    <!--<script src="templates/casadomicroondascuritiba/js/jquery-noconflict.js" type="text/javascript"></script>-->
+    <script src="../templates/js/jquery.sticky.js" type="text/javascript"></script>
+    <script src="../templates/js/frontend-edit.js" type="text/javascript"></script>
+    <script src="../templates/js/jquery.nivo.slider.min.js" type="text/javascript"></script>
+    <script src="../templates/js/jsQueEstavaNoIndex.js" type="text/javascript"></script>
+    <script src="../templates/js/main.js" type="text/javascript"></script>
+    <script src="../templates/js/caption.js" type="text/javascript"></script>
 
 </head>
 <body class="site com-content view-featured no-layout no-task itemid-101 pt-br ltr  sticky-header layout-fluid">
 <div class="body-innerwrapper">
-    <section id="sp-top-bar">
+    <section id="sp-top-bar" aria-label="Topo do site">
         <div class="container">
             <div class="row">
                 <div id="sp-top1" class="col-sm-6 col-md-6">
-                    <div class="sp-column ">
-                        <div class="sp-module ">
+                    <div class="sp-column">
+                        <div class="sp-module">
                             <div class="sp-module-content">
-
                                 <div class="custom">
-                                    <p style="text-align: center;"><a title="Casa do Microondas Curitiba"
-                                                                      href="index.html"><img
-                                            title="Casa do Microondas Curitiba"
-                                            src="images/site/casa-microondas-curitiba.jpg"
-                                            alt="Casa do Microondas Curitiba"/></a></p></div>
+                                    <p style="text-align: center;">
+                                        <a title="Casa do Microondas em Curitiba - Página Inicial" href="index.html" aria-label="Ir para página inicial da Casa do Microondas">
+                                            <img
+                                                src="images/site/casa-microondas-curitiba.jpg"
+                                                alt="Logo da Casa do Microondas em Curitiba"
+                                                title="Casa do Microondas Curitiba">
+                                        </a>
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div id="sp-top2" class="col-sm-6 col-md-6">
-                    <div class="sp-column ">
-                        <div class="sp-module ">
+                    <div class="sp-column">
+                        <div class="sp-module">
                             <div class="sp-module-content">
-
                                 <div class="custom">
-                                    <p><a title="Conserto de Microondas Curitiba"
-                                          href="index.html"><img
-                                            style="display: block; margin-left: auto; margin-right: auto;"
-                                            title="Conserto de Microondas Curitiba"
-                                            src="images/site/conserto-microondas-curitiba.jpg"
-                                            alt="Conserto de Microondas Curitiba"/></a></p></div>
+                                    <p>
+                                        <a title="Conserto de Microondas em Curitiba - Página Inicial" href="index.html" aria-label="Ir para página inicial de conserto de microondas">
+                                            <img
+                                                style="display: block; margin-left: auto; margin-right: auto;"
+                                                src="images/site/conserto-microondas-curitiba.jpg"
+                                                alt="Imagem representando conserto de microondas em Curitiba"
+                                                title="Conserto de Microondas em Curitiba">
+                                        </a>
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -120,6 +126,8 @@
             </div>
         </div>
     </section>
+    
+    
     <header id="sp-header">
         <div class="container">
             <div class="row">
