ajuste nos caminhos pros scripts

--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
 
     <!-- Scripts do projeto -->
     <!--<script src="templates/casadomicroondascuritiba/js/jquery-noconflict.js" type="text/javascript"></script>-->
-    <script src="../templates/js/jquery.sticky.js" type="text/javascript"></script>
-    <script src="../templates/js/frontend-edit.js" type="text/javascript"></script>
-    <script src="../templates/js/jquery.nivo.slider.min.js" type="text/javascript"></script>
-    <script src="../templates/js/jsQueEstavaNoIndex.js" type="text/javascript"></script>
-    <script src="../templates/js/main.js" type="text/javascript"></script>
-    <script src="../templates/js/caption.js" type="text/javascript"></script>
+    <script src="templates/js/jquery.sticky.js" type="text/javascript"></script>
+    <script src="templates/js/frontend-edit.js" type="text/javascript"></script>
+    <script src="templates/js/jquery.nivo.slider.min.js" type="text/javascript"></script>
+    <script src="templates/js/jsQueEstavaNoIndex.js" type="text/javascript"></script>
+    <script src="templates/js/main.js" type="text/javascript"></script>
+    <script src="templates/js/caption.js" type="text/javascript"></script>
 
 </head>
 <body class="site com-content view-featured no-layout no-task itemid-101 pt-br ltr  sticky-header layout-fluid">
