--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <h1>Seu micro-ondas parou? Conserto rápido e garantido!</h1>
   <p>Atendimento em domicílio ou em nossa loja. Técnicos especializados, diagnóstico na hora!</p>
   <div class="cta">
-    <a href="#contato">Solicitar orçamento grátis</a>
+    <a href="links/contato.html">Solicitar orçamento grátis</a>
   </div>
 </header>
 
