imagens sem fundo

--- a/index.html
+++ b/index.html
@@ -4,93 +4,79 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Conserto de Micro-ondas</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-<!-- Topo com imagens -->
-<section id="sp-top-bar">
-  <div class="container">
-    <a href="index.html" title="Casa do Microondas Curitiba">
-      <img src="images/site/casa-microondas-curitiba.jpg" alt="Casa do Microondas Curitiba">
-    </a>
-    <a href="index.html" title="Conserto de Microondas Curitiba">
-      <img src="images/site/conserto-microondas-curitiba.jpg" alt="Conserto de Microondas Curitiba">
-    </a>
-  </div>
-</section>
+  <section id="sp-top-bar">
+    <div class="container">
+      <a href="index.html" title="Casa do Microondas Curitiba">
+        <img src="images/site/casa-microondas-curitiba.jpg" alt="Casa do Microondas Curitiba">
+      </a>
+      <a href="index.html" title="Conserto de Microondas Curitiba">
+        <img src="images/site/conserto-microondas-curitiba.jpg" alt="Conserto de Microondas Curitiba">
+      </a>
+    </div>
+  </section>
 
-<header>
-  <h1>Seu micro-ondas parou? Conserto rápido e garantido!</h1>
-  <p>Atendimento em domicílio ou em nossa loja. Técnicos especializados, diagnóstico na hora!</p>
-  <div class="cta">
-    <a href="links/contato.html">Solicitar orçamento grátis</a>
-  </div>
-</header>
+  <header>
+    <h1>Seu micro-ondas parou? Conserto rápido e garantido!</h1>
+    <p>Atendimento em domícilio ou em nossa loja. Técnicos especializados, diagnóstico na hora!</p>
+    <div class="cta">
+      <a href="links/contato.html">Solicitar orçamento grátis</a>
+    </div>
+  </header>
 
-<!-- Módulos com imagens e links -->
-<section id="sp-modulos">
-  <div class="container">
-    <a href="links/conserto-de-microondas.html" title="Conserto de microondas em Curitiba">
-      <img src="images/site/conserto-curitiba.jpg" alt="Conserto de microondas em Curitiba">
-    </a>
-    <a href="links/conserto-de-forno-elétrico.html" title="Conserto de forno elétrico">
-      <img src="images/site/conserto-forno-eletrico-curitiba.jpg" alt="Conserto de forno elétrico">
-    </a>
-    <a href="links/reforma-de-microondas.html" title="Reformas de microondas em Curitiba">
-      <img src="images/site/reformas.jpg" alt="Reformas de microondas em Curitiba">
-    </a>
-    <a href="links/acessórios.html" title="Acessórios microondas Curitiba">
-      <img src="images/site/acessorio-microondas.jpg" alt="Acessórios microondas Curitiba">
-    </a>
-    <a href="links/microondas-novos-e-usados.html" title="Microondas novos e usados">
-      <img src="images/site/novosusados.jpg" alt="Microondas novos e usados">
-    </a>
-    <a href="links/serviço-de-busca-e-entrega.html" title="Serviço de busca e entrega">
-      <img src="images/site/busca-entrega.jpg" alt="Serviço de busca e entrega">
-    </a>
-  </div>
-</section>
+  <section id="sp-modulos">
+    <div class="container">
+      <a href="links/conserto-de-microondas.html" title="Conserto de microondas em Curitiba">
+        <img src="images/site/conserto-curitiba.jpg" alt="Conserto de microondas em Curitiba">
+      </a>
+      <a href="links/conserto-de-forno-elétrico.html" title="Conserto de forno elétrico">
+        <img src="images/site/conserto-forno-eletrico-curitiba.jpg" alt="Conserto de forno elétrico">
+      </a>
+      <a href="links/reforma-de-microondas.html" title="Reformas de microondas em Curitiba">
+        <img src="images/site/reformas.jpg" alt="Reformas de microondas em Curitiba">
+      </a>
+      <a href="links/acessórios.html" title="Acessórios microondas Curitiba">
+        <img src="images/site/acessorio-microondas.jpg" alt="Acessórios microondas Curitiba">
+      </a>
+      <a href="links/microondas-novos-e-usados.html" title="Microondas novos e usados">
+        <img src="images/site/novosusados.jpg" alt="Microondas novos e usados">
+      </a>
+      <a href="links/serviço-de-busca-e-entrega.html" title="Serviço de busca e entrega">
+        <img src="images/site/busca-entrega.jpg" alt="Serviço de busca e entrega">
+      </a>
+    </div>
+  </section>
 
-<!--<section>-->
-<!--  <h2>Serviços que oferecemos</h2>-->
-<!--  <div class="grid">-->
-<!--    <div class="card"><h3>Troca de fusível</h3></div>-->
-<!--    <div class="card"><h3>Conserto de placa</h3></div>-->
-<!--    <div class="card"><h3>Troca de magnetron</h3></div>-->
-<!--    <div class="card"><h3>Reparo em botões e visor</h3></div>-->
-<!--    <div class="card"><h3>Micro-ondas que não esquenta</h3></div>-->
-<!--    <div class="card"><h3>Faíscas e ruídos estranhos</h3></div>-->
-<!--  </div>-->
-<!--</section>-->
+  <section>
+    <h2>Por que escolher a gente?</h2>
+    <div class="grid">
+      <div class="card">✅ Atendimento rápido e agendado</div>
+      <div class="card">✅ Garantia de até 6 meses</div>
+      <div class="card">✅ Peças originais</div>
+      <div class="card">✅ Técnicos certificados</div>
+      <div class="card">✅ Mais de 1000 clientes atendidos</div>
+    </div>
+  </section>
 
-<section>
-  <h2>Por que escolher a gente?</h2>
-  <div class="grid">
-    <div class="card">✅ Atendimento rápido e agendado</div>
-    <div class="card">✅ Garantia de até 6 meses</div>
-    <div class="card">✅ Peças originais</div>
-    <div class="card">✅ Técnicos certificados</div>
-    <div class="card">✅ Mais de 1000 clientes atendidos</div>
-  </div>
-</section>
+  <section>
+    <h2>Áreas de Atendimento</h2>
+    <p>Atendemos em domícilio nas regiões: Centro, Zona Norte, Zona Sul, Zona Leste e Zona Oeste.</p>
+    <p>Também recebemos aparelhos em nossa loja localizada no bairro X.</p>
+  </section>
 
-<section>
-  <h2>Áreas de Atendimento</h2>
-  <p>Atendemos em domicílio nas regiões: Centro, Zona Norte, Zona Sul, Zona Leste e Zona Oeste.</p>
-  <p>Também recebemos aparelhos em nossa loja localizada no bairro X.</p>
-</section>
+  <section class="cta-section" id="contato">
+    <h2>Fale agora com um técnico</h2>
+    <p>Estamos prontos para resolver seu problema com agilidade.</p>
+    <div class="cta">
+      <a href="https://wa.me/5599999999999" target="_blank">Chamar no WhatsApp</a>
+    </div>
+  </section>
 
-<section class="cta-section" id="contato">
-  <h2>Fale agora com um técnico</h2>
-  <p>Estamos prontos para resolver seu problema com agilidade.</p>
-  <div class="cta">
-    <a href="https://wa.me/5599999999999" target="_blank">Chamar no WhatsApp</a>
-  </div>
-</section>
-
-<footer>
-  <p>&copy; 2025 Conserto de Micro-ondas | CNPJ 00.000.000/0001-00</p>
-  <p>Horário de atendimento: Seg a Sáb, das 08h às 18h</p>
-</footer>
+  <footer>
+    <p>&copy; 2025 Conserto de Micro-ondas | CNPJ 00.000.000/0001-00</p>
+    <p>Horário de atendimento: Seg a Sáb, das 08h às 18h</p>
+  </footer>
 </body>
 </html>
