--- a/index.html
+++ b/index.html
@@ -23,29 +23,29 @@
   <h1>Seu micro-ondas parou? Conserto rápido e garantido!</h1>
   <p>Atendimento em domicílio ou em nossa loja. Técnicos especializados, diagnóstico na hora!</p>
   <div class="cta">
-    <a href="links/contato.html">Solicitar orçamento grátis</a>
+    <a href="links/../contato.html">Solicitar orçamento grátis</a>
   </div>
 </header>
 
 <!-- Módulos com imagens e links -->
 <section id="sp-modulos">
   <div class="container">
-    <a href="links/conserto-de-microondas.html" title="Conserto de microondas em Curitiba">
+    <a href="links/contato.html" title="Conserto de microondas em Curitiba">
       <img src="images/site/conserto-curitiba.jpg" alt="Conserto de microondas em Curitiba">
     </a>
-    <a href="links/conserto-de-forno-elétrico.html" title="Conserto de forno elétrico">
+    <a href="links/contato.html" title="Conserto de forno elétrico">
       <img src="images/site/conserto-forno-eletrico-curitiba.jpg" alt="Conserto de forno elétrico">
     </a>
-    <a href="links/reforma-de-microondas.html" title="Reformas de microondas em Curitiba">
+    <a href="links/contato.html" title="Reformas de microondas em Curitiba">
       <img src="images/site/reformas.jpg" alt="Reformas de microondas em Curitiba">
     </a>
-    <a href="links/acessórios.html" title="Acessórios microondas Curitiba">
+    <a href="index.html" title="Acessórios microondas Curitiba">
       <img src="images/site/acessorio-microondas.jpg" alt="Acessórios microondas Curitiba">
     </a>
-    <a href="links/microondas-novos-e-usados.html" title="Microondas novos e usados">
+    <a href="index.html" title="Microondas novos e usados">
       <img src="images/site/novosusados.jpg" alt="Microondas novos e usados">
     </a>
-    <a href="links/serviço-de-busca-e-entrega.html" title="Serviço de busca e entrega">
+    <a href="index.html" title="Serviço de busca e entrega">
       <img src="images/site/busca-entrega.jpg" alt="Serviço de busca e entrega">
     </a>
   </div>
