--- a/links/contato.html
+++ b/links/contato.html
@@ -8,6 +8,16 @@
   <link rel="stylesheet" href="../css/style.css" />
 </head>
 <body>
+<section id="sp-top-bar">
+  <div class="container">
+    <a href="../index.html" title="Casa do Microondas Curitiba">
+      <img src="../images/site/casa-microondas-curitiba.png" alt="Casa do Microondas Curitiba">
+    </a>
+    <a href="../index.html" title="Conserto de Microondas Curitiba">
+      <img src="../images/site/conserto-microondas-curitiba.png" alt="Conserto de Microondas Curitiba">
+    </a>
+  </div>
+</section>
 <section id="sp-modulos">
   <div class="container">
     <a href="contato.html" title="Conserto de microondas em Curitiba">
