--- a/links/contato.html
+++ b/links/contato.html
@@ -1,117 +1,117 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Fale Conosco - Conserto de Micro-ondas</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../css/style.css" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Fale Conosco - Conserto de Micro-ondas</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/style.css"/>
 </head>
 <body>
 <section id="sp-top-bar">
-  <div class="container">
-    <a href="../index.html" title="Casa do Microondas Curitiba">
-      <img src="../images/site/casa-microondas-curitiba.png" alt="Casa do Microondas Curitiba">
-    </a>
-    <a href="../index.html" title="Conserto de Microondas Curitiba">
-      <img src="../images/site/conserto-microondas-curitiba.png" alt="Conserto de Microondas Curitiba">
-    </a>
-  </div>
+    <div class="container">
+        <a href="../index.html" title="Casa do Microondas Curitiba">
+            <img src="../images/site/casa-microondas-curitiba.png" alt="Casa do Microondas Curitiba">
+        </a>
+        <a href="../index.html" title="Conserto de Microondas Curitiba">
+            <img src="../images/site/conserto-microondas-curitiba.png" alt="Conserto de Microondas Curitiba">
+        </a>
+    </div>
 </section>
 <section id="sp-modulos">
-  <div class="container">
-    <a href="contato.html" title="Conserto de microondas em Curitiba">
-      <img src="../images/site/conserto-curitiba.jpg" alt="Conserto de microondas em Curitiba">
-    </a>
-    <a href="contato.html" title="Conserto de forno elétrico">
-      <img src="../images/site/conserto-forno-eletrico-curitiba.jpg" alt="Conserto de forno elétrico">
-    </a>
-    <a href="contato.html" title="Reformas de microondas em Curitiba">
-      <img src="../images/site/reformas.jpg" alt="Reformas de microondas em Curitiba">
-    </a>
-    <a href="../index.html" title="Acessórios microondas Curitiba">
-      <img src="../images/site/acessorio-microondas.jpg" alt="Acessórios microondas Curitiba">
-    </a>
-    <a href="../index.html" title="Microondas novos e usados">
-      <img src="../images/site/novosusados.jpg" alt="Microondas novos e usados">
-    </a>
-    <a href="../index.html" title="Serviço de busca e entrega">
-      <img src="../images/site/busca-entrega.jpg" alt="Serviço de busca e entrega">
-    </a>
-  </div>
+    <div class="container">
+        <a href="contato.html" title="Conserto de microondas em Curitiba">
+            <img src="../images/site/conserto-curitiba.jpg" alt="Conserto de microondas em Curitiba">
+        </a>
+        <a href="contato.html" title="Conserto de forno elétrico">
+            <img src="../images/site/conserto-forno-eletrico-curitiba.jpg" alt="Conserto de forno elétrico">
+        </a>
+        <a href="contato.html" title="Reformas de microondas em Curitiba">
+            <img src="../images/site/reformas.jpg" alt="Reformas de microondas em Curitiba">
+        </a>
+        <a href="../index.html" title="Acessórios microondas Curitiba">
+            <img src="../images/site/acessorio-microondas.jpg" alt="Acessórios microondas Curitiba">
+        </a>
+        <a href="../index.html" title="Microondas novos e usados">
+            <img src="../images/site/novosusados.jpg" alt="Microondas novos e usados">
+        </a>
+        <a href="../index.html" title="Serviço de busca e entrega">
+            <img src="../images/site/busca-entrega.jpg" alt="Serviço de busca e entrega">
+        </a>
+    </div>
 </section>
 <div class="container my-5 bg-white rounded-4 shadow p-5">
-  <h1 class="mb-4 text-center">Fale Conosco</h1>
+    <h1 class="mb-4 text-center">Fale Conosco</h1>
 
-  <div class="row g-5">
-    <!-- Coluna dos mapas -->
-    <div class="col-md-6">
-      <h5>Avenida Presidente Kennedy 410, Rebouças - Curitiba</h5>
-      <iframe
-              src="https://www.google.com/maps/embed?pb=..."
-              width="100%"
-              height="250"
-              style="border:0;"
-              allowfullscreen=""
-              loading="lazy"
-              class="rounded-3 mb-4">
-      </iframe>
+    <div class="row g-5">
+        <!-- Coluna dos mapas -->
+        <div class="col-md-6">
+            <h5>Avenida Presidente Kennedy 410, Rebouças - Curitiba</h5>
+            <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3602.5494757412584!2d-49.267548484985376!3d-25.45332148377765!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94dce48c9ef39769%3A0xef8a017c3ba84507!2sAv.+Pres.+Kennedy%2C+410+-+Rebou%C3%A7as%2C+Curitiba+-+PR!5e0!3m2!1spt-BR!2sbr!4v1497629686263"
+                    width="100%"
+                    height="250"
+                    style="border:0;"
+                    allowfullscreen="allowfullscreen"
+                    loading="lazy"
+                    class="rounded-3 mb-4">
+            </iframe>
 
-      <h5>Rua Saturnino Miranda, 84 - Santa Felicidade - Curitiba</h5>
-      <iframe
-              src="https://maps.google.com.br/maps?f=q&amp;q=Rua+Saturnino+Miranda..."
-              width="100%"
-              height="250"
-              style="border:0;"
-              allowfullscreen=""
-              loading="lazy"
-              class="rounded-3">
-      </iframe>
+            <h5>Rua Saturnino Miranda, 84 - Santa Felicidade - Curitiba</h5>
+            <iframe
+                    src="https://maps.google.com.br/maps?f=q&amp;source=s_q&amp;hl=pt-BR&amp;geocode=&amp;q=Rua+Saturnino+Miranda,+84+-+Santa+Felicidade++-+curitiba&amp;aq=&amp;sll=-25.453343,-49.265397&amp;sspn=0.00838,0.013937&amp;ie=UTF8&amp;hq=&amp;hnear=R.+Saturnino+Miranda,+84+-+Santa+Felicidade,+Curitiba+-+Paran%C3%A1,+82030-320&amp;t=m&amp;z=14&amp;ll=-25.400057,-49.334174&amp;output=embed"
+                    width="100%"
+                    height="250"
+                    style="border:0;"
+                    allowfullscreen=""
+                    loading="lazy"
+                    class="rounded-3">
+            </iframe>
+        </div>
+
+        <!-- Coluna do formulário -->
+        <div class="col-md-6">
+            <form action="#" method="POST">
+                <div class="mb-3">
+                    <label for="nome" class="form-label">Seu nome</label>
+                    <input type="text" id="nome" name="nome" class="form-control" required/>
+                </div>
+
+                <div class="mb-3">
+                    <label for="email" class="form-label">E-mail</label>
+                    <input type="email" id="email" name="email" class="form-control" required/>
+                </div>
+
+                <div class="mb-3">
+                    <label for="telefone" class="form-label">Telefone</label>
+                    <input type="tel" id="telefone" name="telefone" class="form-control" placeholder="(00) 00000-0000"/>
+                </div>
+
+                <div class="mb-3">
+                    <label for="assunto" class="form-label">Assunto</label>
+                    <select id="assunto" name="assunto" class="form-select">
+                        <option value="orcamento">Solicitar orçamento</option>
+                        <option value="duvida">Dúvida técnica</option>
+                        <option value="outros">Outros</option>
+                    </select>
+                </div>
+
+                <div class="mb-3">
+                    <label for="mensagem" class="form-label">Mensagem</label>
+                    <textarea id="mensagem" name="mensagem" rows="4" class="form-control" required></textarea>
+                </div>
+
+                <div class="d-grid">
+                    <button type="submit" class="btn btn-primary btn-lg">Enviar mensagem</button>
+                </div>
+            </form>
+        </div>
     </div>
-
-    <!-- Coluna do formulário -->
-    <div class="col-md-6">
-      <form action="#" method="POST">
-        <div class="mb-3">
-          <label for="nome" class="form-label">Seu nome</label>
-          <input type="text" id="nome" name="nome" class="form-control" required />
-        </div>
-
-        <div class="mb-3">
-          <label for="email" class="form-label">E-mail</label>
-          <input type="email" id="email" name="email" class="form-control" required />
-        </div>
-
-        <div class="mb-3">
-          <label for="telefone" class="form-label">Telefone</label>
-          <input type="tel" id="telefone" name="telefone" class="form-control" placeholder="(00) 00000-0000" />
-        </div>
-
-        <div class="mb-3">
-          <label for="assunto" class="form-label">Assunto</label>
-          <select id="assunto" name="assunto" class="form-select">
-            <option value="orcamento">Solicitar orçamento</option>
-            <option value="duvida">Dúvida técnica</option>
-            <option value="outros">Outros</option>
-          </select>
-        </div>
-
-        <div class="mb-3">
-          <label for="mensagem" class="form-label">Mensagem</label>
-          <textarea id="mensagem" name="mensagem" rows="4" class="form-control" required></textarea>
-        </div>
-
-        <div class="d-grid">
-          <button type="submit" class="btn btn-primary btn-lg">Enviar mensagem</button>
-        </div>
-      </form>
-    </div>
-  </div>
 </div>
 
 <footer>
-  <p>&copy; 2025 Conserto de Micro-ondas | CNPJ 00.000.000/0001-00</p>
-  <p>Horário de atendimento: Seg a Sáb, das 08h às 18h</p>
+    <p>&copy; 2025 Conserto de Micro-ondas | CNPJ 00.000.000/0001-00</p>
+    <p>Horário de atendimento: Seg a Sáb, das 08h às 18h</p>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
