--- a/index.html
+++ b/index.html
@@ -1,81 +1,79 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Conserto de Micro-ondas</title>
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Conserto de Micro-ondas</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <header>
-  <h1>Seu micro-ondas parou? Conserto rápido e garantido!</h1>
-  <p>Atendimento em domícilio ou em nossa loja. Técnicos especializados, diagnóstico na hora!</p>
-  <div class="cta">
-    <a href="links/contato.html">Solicitar orçamento grátis</a>
-  </div>
+    <h1>Seu micro-ondas parou? Conserto rápido e garantido!</h1>
+    <p>Atendimento em domícilio ou em nossa loja. Técnicos especializados, diagnóstico na hora!</p>
+    <div class="cta">
+        <a href="links/contato.html">Solicitar orçamento grátis</a>
+    </div>
 </header>
 <section id="sp-top-bar">
-  <div class="container">
-    <a href="index.html" title="Casa do Microondas Curitiba">
-      <img src="images/site/casa-microondas-curitiba.png" alt="Casa do Microondas Curitiba">
-    </a>
-    <a href="index.html" title="Conserto de Microondas Curitiba">
-      <img src="images/site/conserto-microondas-curitiba.png" alt="Conserto de Microondas Curitiba">
-    </a>
-  </div>
+    <div class="container">
+        <a href="index.html" title="Casa do Microondas Curitiba">
+            <img src="images/site/casa-microondas-curitiba.png" alt="Casa do Microondas Curitiba">
+        </a>
+        <a href="index.html" title="Conserto de Microondas Curitiba">
+            <img src="images/site/conserto-microondas-curitiba.png" alt="Conserto de Microondas Curitiba">
+        </a>
+    </div>
 </section>
 
 <section id="sp-modulos">
-  <div class="container">
-    <a href="links/contato.html" title="Conserto de microondas em Curitiba">
-      <img src="images/site/conserto-curitiba.jpg" alt="Conserto de microondas em Curitiba">
-    </a>
-    <a href="links/contato.html" title="Conserto de forno elétrico">
-      <img src="images/site/conserto-forno-eletrico-curitiba.jpg" alt="Conserto de forno elétrico">
-    </a>
-    <a href="links/contato.html" title="Reformas de microondas em Curitiba">
-      <img src="images/site/reformas.jpg" alt="Reformas de microondas em Curitiba">
-    </a>
-    <a href="index.html" title="Acessórios microondas Curitiba">
-      <img src="images/site/acessorio-microondas.jpg" alt="Acessórios microondas Curitiba">
-    </a>
-    <a href="index.html" title="Microondas novos e usados">
-      <img src="images/site/novosusados.jpg" alt="Microondas novos e usados">
-    </a>
-    <a href="index.html" title="Serviço de busca e entrega">
-      <img src="images/site/busca-entrega.jpg" alt="Serviço de busca e entrega">
-    </a>
-  </div>
+    <div class="container">
+        <a href="links/contato.html" title="Conserto de microondas em Curitiba">
+            <img src="images/site/conserto-curitiba.jpg" alt="Conserto de microondas em Curitiba">
+        </a>
+        <a href="links/contato.html" title="Conserto de forno elétrico">
+            <img src="images/site/conserto-forno-eletrico-curitiba.jpg" alt="Conserto de forno elétrico">
+        </a>
+        <a href="links/contato.html" title="Reformas de microondas em Curitiba">
+            <img src="images/site/reformas.jpg" alt="Reformas de microondas em Curitiba">
+        </a>
+        <a href="index.html" title="Acessórios microondas Curitiba">
+            <img src="images/site/acessorio-microondas.jpg" alt="Acessórios microondas Curitiba">
+        </a>
+        <a href="index.html" title="Microondas novos e usados">
+            <img src="images/site/novosusados.jpg" alt="Microondas novos e usados">
+        </a>
+        <a href="index.html" title="Serviço de busca e entrega">
+            <img src="images/site/busca-entrega.jpg" alt="Serviço de busca e entrega">
+        </a>
+    </div>
 </section>
 
 <section>
-  <h2>Por que escolher a gente?</h2>
-  <div class="grid">
-    <div class="card">✅ Atendimento rápido e agendado</div>
-    <div class="card">✅ Garantia de até 6 meses</div>
-    <div class="card">✅ Peças originais</div>
-    <div class="card">✅ Técnicos certificados</div>
-    <div class="card">✅ Mais de 1000 clientes atendidos</div>
-  </div>
+    <h2>Por que escolher a gente?</h2>
+    <div class="grid">
+        <div class="card">✅ Consertamos seu forno em 4 horas</div>
+        <div class="card">✅ Reformamos</div>
+        <div class="card">✅ Serviço com garantia</div>
+    </div>
 </section>
 
 <section>
-  <h2>Áreas de Atendimento</h2>
-  <p>Atendemos em domícilio nas regiões: Centro, Zona Norte, Zona Sul, Zona Leste e Zona Oeste.</p>
-  <p>Também recebemos aparelhos em nossa loja localizada no bairro X.</p>
+    <h2>Áreas de Atendimento</h2>
+    <p>Atendemos em domícilio nas regiões: Centro, Zona Norte, Zona Sul, Zona Leste e Zona Oeste.</p>
+    <p>Também recebemos aparelhos em nossa loja localizada no bairro X.</p>
 </section>
 
 <section class="cta-section" id="contato">
-  <h2>Fale agora com um técnico</h2>
-  <p>Estamos prontos para resolver seu problema com agilidade.</p>
-  <div class="cta">
-    <a href="https://wa.me/5599999999999" target="_blank">Chamar no WhatsApp</a>
-  </div>
+    <h2>Fale agora com um técnico</h2>
+    <p>Estamos prontos para resolver seu problema com agilidade.</p>
+    <div class="cta">
+        <a href="https://wa.me/5599999999999" target="_blank">Chamar no WhatsApp</a>
+    </div>
 </section>
 
 <footer>
-  <p>&copy; 2025 Conserto de Micro-ondas | CNPJ 00.000.000/0001-00</p>
-  <p>Horário de atendimento: Seg a Sáb, das 08h às 18h</p>
+    <p>&copy; 2025 Conserto de Micro-ondas | CNPJ 00.000.000/0001-00</p>
+    <p>Horário de atendimento: Seg a Sáb, das 08h às 18h</p>
 </footer>
 </body>
 </html>
