--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <a href="links/contato.html">Solicitar orçamento grátis</a>
     </div>
 </header>
+<img src="images/baners-consertos/assistencia-tecnica-microondas-curitiba.png" alt="Assistência Técnica de Microondas em Curitiba" style="width:100%;">
 <section id="sp-top-bar">
     <div class="container">
         <a href="index.html" title="Casa do Microondas Curitiba">
@@ -62,15 +63,6 @@
     <p>Atendemos em domícilio nas regiões: Centro, Zona Norte, Zona Sul, Zona Leste e Zona Oeste.</p>
     <p>Também recebemos aparelhos em nossa loja localizada no bairro X.</p>
 </section>
-
-<section class="cta-section" id="contato">
-    <h2>Fale agora com um técnico</h2>
-    <p>Estamos prontos para resolver seu problema com agilidade.</p>
-    <div class="cta">
-        <a href="https://wa.me/5599999999999" target="_blank">Chamar no WhatsApp</a>
-    </div>
-</section>
-
 <footer>
     <p>&copy; 2025 Conserto de Micro-ondas | CNPJ 00.000.000/0001-00</p>
     <p>Horário de atendimento: Seg a Sáb, das 08h às 18h</p>
