--- a/links/contato.html
+++ b/links/contato.html
@@ -6,6 +6,10 @@
     <title>Fale Conosco - Conserto de Micro-ondas</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css"/>
+
+    <!-- Scripts do projeto -->
+    <script src="../templates/js/contato.js" type="text/javascript"></script>
+    
 </head>
 <body>
 <section id="sp-top-bar">
