alguns fixes na arvore

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <h1>Seu micro-ondas parou? Conserto rápido e garantido!</h1>
     <p>Atendimento em domícilio ou em nossa loja. Técnicos especializados, diagnóstico na hora!</p>
     <div class="cta">
-        <a href="links/contato.html">Solicitar orçamento grátis</a>
+        <a href="contato.html">Solicitar orçamento grátis</a>
     </div>
 </header>
-<img src="images/baners-consertos/assistencia-tecnica-microondas-curitiba.png" alt="Assistência Técnica de Microondas em Curitiba" style="width:100%;">
+<img src="images/site/baners-consertos/assistencia-tecnica-microondas-curitiba.png" alt="Assistência Técnica de Microondas em Curitiba" style="width:100%;">
 <section id="sp-top-bar">
     <div class="container">
         <a href="index.html" title="Casa do Microondas Curitiba">
@@ -28,13 +28,13 @@
 
 <section id="sp-modulos">
     <div class="container">
-        <a href="links/contato.html" title="Conserto de microondas em Curitiba">
+        <a href="contato.html" title="Conserto de microondas em Curitiba">
             <img src="images/site/conserto-curitiba.jpg" alt="Conserto de microondas em Curitiba">
         </a>
-        <a href="links/contato.html" title="Conserto de forno elétrico">
+        <a href="contato.html" title="Conserto de forno elétrico">
             <img src="images/site/conserto-forno-eletrico-curitiba.jpg" alt="Conserto de forno elétrico">
         </a>
-        <a href="links/contato.html" title="Reformas de microondas em Curitiba">
+        <a href="contato.html" title="Reformas de microondas em Curitiba">
             <img src="images/site/reformas.jpg" alt="Reformas de microondas em Curitiba">
         </a>
         <a href="index.html" title="Acessórios microondas Curitiba">
