--- a/contato.html
+++ b/contato.html
@@ -5,42 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Fale Conosco - Conserto de Micro-ondas</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/style.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
 
     <!-- Scripts do projeto -->
-    <script src="../templates/js/contato.js" type="text/javascript"></script>
+    <script src="js/contato.js" type="text/javascript"></script>
     
 </head>
 <body>
 <section id="sp-top-bar">
     <div class="container">
-        <a href="../index.html" title="Casa do Microondas Curitiba">
-            <img src="../images/site/casa-microondas-curitiba.png" alt="Casa do Microondas Curitiba">
+        <a href="index.html" title="Casa do Microondas Curitiba">
+            <img src="images/site/casa-microondas-curitiba.png" alt="Casa do Microondas Curitiba">
         </a>
-        <a href="../index.html" title="Conserto de Microondas Curitiba">
-            <img src="../images/site/conserto-microondas-curitiba.png" alt="Conserto de Microondas Curitiba">
+        <a href="index.html" title="Conserto de Microondas Curitiba">
+            <img src="images/site/conserto-microondas-curitiba.png" alt="Conserto de Microondas Curitiba">
         </a>
     </div>
 </section>
 <section id="sp-modulos">
     <div class="container">
         <a href="contato.html" title="Conserto de microondas em Curitiba">
-            <img src="../images/site/conserto-curitiba.jpg" alt="Conserto de microondas em Curitiba">
+            <img src="images/site/conserto-curitiba.jpg" alt="Conserto de microondas em Curitiba">
         </a>
         <a href="contato.html" title="Conserto de forno elétrico">
-            <img src="../images/site/conserto-forno-eletrico-curitiba.jpg" alt="Conserto de forno elétrico">
+            <img src="images/site/conserto-forno-eletrico-curitiba.jpg" alt="Conserto de forno elétrico">
         </a>
         <a href="contato.html" title="Reformas de microondas em Curitiba">
-            <img src="../images/site/reformas.jpg" alt="Reformas de microondas em Curitiba">
+            <img src="images/site/reformas.jpg" alt="Reformas de microondas em Curitiba">
         </a>
-        <a href="../index.html" title="Acessórios microondas Curitiba">
-            <img src="../images/site/acessorio-microondas.jpg" alt="Acessórios microondas Curitiba">
+        <a href="index.html" title="Acessórios microondas Curitiba">
+            <img src="images/site/acessorio-microondas.jpg" alt="Acessórios microondas Curitiba">
         </a>
-        <a href="../index.html" title="Microondas novos e usados">
-            <img src="../images/site/novosusados.jpg" alt="Microondas novos e usados">
+        <a href="index.html" title="Microondas novos e usados">
+            <img src="images/site/novosusados.jpg" alt="Microondas novos e usados">
         </a>
-        <a href="../index.html" title="Serviço de busca e entrega">
-            <img src="../images/site/busca-entrega.jpg" alt="Serviço de busca e entrega">
+        <a href="index.html" title="Serviço de busca e entrega">
+            <img src="images/site/busca-entrega.jpg" alt="Serviço de busca e entrega">
         </a>
     </div>
 </section>
