--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Conserto de Micro-ondas</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="favicon.ico" type="favicon.ico">
 </head>
 <body>
 <header>
@@ -14,7 +15,7 @@
         <a href="contato.html">Solicitar orçamento grátis</a>
     </div>
 </header>
-<img src="images/site/baners-consertos/assistencia-tecnica-microondas-curitiba.png" alt="Assistência Técnica de Microondas em Curitiba" style="width:100%;">
+<img src="images/site/assistencia-tecnica-microondas-curitiba.png" alt="Assistência Técnica de Microondas em Curitiba" style="width:100%;">
 <section id="sp-top-bar">
     <div class="container">
         <a href="index.html" title="Casa do Microondas Curitiba">
