--- a/contato.html
+++ b/contato.html
@@ -6,8 +6,7 @@
     <title>Fale Conosco - Conserto de Micro-ondas</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css"/>
-
-    <!-- Scripts do projeto -->
+    <link rel="icon" href="favicon.ico" type="favicon.ico">
     <script src="js/contato.js" type="text/javascript"></script>
     
 </head>
